@@ -1,3 +1,8 @@
+2009-07-26  Mark Ellis  <mark@mpellis.org.uk>
+
+	* lib/{info.c,synce.h.in} - allow search/creation of SynceInfo 
+	  by object path as well as device name
+
 2009-07-16  Mark Ellis  <mark@mpellis.org.uk>
 
 	* 0.14 release
